Changes to text size of h2 on screens max-width 821px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,7 @@ label {
 @media screen and (max-width: 821px) {
 
     h2 {
-        font-size: 1.2em;
+        font-size: 37px;
     }
 
     #menu>li {
