--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&family=Fredoka:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap');
 
 /* Wildcard code from Code Institute Love Running project  */
 
@@ -551,6 +551,14 @@ label {
         letter-spacing: 0.2px;
     }
 
+    /* Below code was taken from inspiration from the follow post - https://stackoverflow.com/questions/14390979/how-do-i-keep-a-nav-bar-at-the-top-of-the-page#:~:text=Use%20position%20absolute%20and%20set,the%20top%20of%20the%20browser. */
+
+    #menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     #intro-text {
         padding: 15px;
         margin: 0 auto;
@@ -613,14 +621,6 @@ label {
 
     h1 {
         font-size: 1em;
-    }
-
-    /* Below code was taken from inspiration from the follow post - https://stackoverflow.com/questions/14390979/how-do-i-keep-a-nav-bar-at-the-top-of-the-page#:~:text=Use%20position%20absolute%20and%20set,the%20top%20of%20the%20browser. */
-
-    #menu {
-        position: absolute;
-        top: 0;
-        left: 0;
     }
 
     h2 {
