Troubleshooting nav bar visibility on iPhone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,6 +497,12 @@ label {
         margin-right: 5px;
     }
 
+    #menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     h2 {
         font-size: 32px;
     }
