--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,7 +383,7 @@ label {
     }
 }
 
-@media screen and (max-width: 976px) {
+@media screen and (max-width: 990px) {
 
     h1 {
         font-size: 1.6em;
@@ -497,6 +497,8 @@ label {
         margin-right: 5px;
     }
 
+    /* Below code was taken from inspiration from the following stack overflow post - https://stackoverflow.com/questions/14390979/how-do-i-keep-a-nav-bar-at-the-top-of-the-page#:~:text=Use%20position%20absolute%20and%20set,the%20top%20of%20the%20browser. */
+
     #menu {
         position: absolute;
         top: 0;
@@ -555,14 +557,6 @@ label {
         margin-left: 3px;
         margin-right: 3px;
         letter-spacing: 0.2px;
-    }
-
-    /* Below code was taken from inspiration from the follow post - https://stackoverflow.com/questions/14390979/how-do-i-keep-a-nav-bar-at-the-top-of-the-page#:~:text=Use%20position%20absolute%20and%20set,the%20top%20of%20the%20browser. */
-
-    #menu {
-        position: absolute;
-        top: 0;
-        left: 0;
     }
 
     #intro-text {
